share icon mobile fix

--- a/www/templates/html/css/player.css
+++ b/www/templates/html/css/player.css
@@ -363,7 +363,15 @@ a:hover, a:visited {
         padding: 8px 0 10px 10px
     }
 }
-.wdn-share-options {
+
+@media (min-width:768px) {
+    .wdn-share-options {
+        font-size: 12px;
+        font-size: .75rem
+    }
+}
+
+.media-content-head .wdn-share-options {
     position: absolute;
     margin: 1px 0 0 -2.083em;
     z-index: 201;
@@ -377,22 +385,13 @@ a:hover, a:visited {
     font-weight: 400;
     font-style: normal;
     font-size: 12px;
-    font-size: .9230769rem;
-    display: none
+    display: none;
 }
-@media (min-width:768px) {
-    .wdn-share-options {
-        font-size: 12px;
-        font-size: .75rem
-    }
+.media-content-head .wdn-share-options {
+    margin: 0;
+    right: 0
 }
-@media (min-width:700px) {
-    .wdn-share-options {
-        margin: 0;
-        right: 0
-    }
-}
-.wdn-share-options:before {
+.media-content-head .wdn-share-options:before {
     content: '';
     position: absolute;
     top: -6px;
@@ -402,13 +401,10 @@ a:hover, a:visited {
     border-right: 6px solid transparent;
     border-bottom: 6px solid #333332;
     border-bottom: 6px solid rgba(51, 51, 50, .97)
+    left: auto;
+    right: 11px
 }
-@media (min-width:700px) {
-    .wdn-share-options:before {
-        left: auto;
-        right: 11px
-    }
-}
+
 .wdn-share-options li {
     list-style: none;
     padding: .602em 0
